# adf_rescue

./: .gitignore  README.md  app.py  config.py  index.html  manage.py  package-lock.json  package.json  pyproject.toml  run.py  tailwind.config.js  tsconfig.json
app/: __init__.py
app/backend/: models.py  routes.py
app/src/components/: HealthCheckQuiz.css  HealthCheckQuiz.tsx  Hero.css
app/static/css/: globals.css
backend/: errors.py  extensions.py  init.py  models.py  routes.py  utils.py  websocket.py
frontend/src/: app.tsx  index.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/: Hero.tsx  Process.tsx
public/: index.html
src/: app.tsx  index.css  index.tsx  setupTests.ts  theme.ts
src/actions/: dashboardActions.ts
src/auth/: AuthProvider.tsx  EmailLinkAuth.tsx  Login.tsx  ProtectedRoute.tsx  SignUpForm.tsx  authHelpers.ts  firebaseConfig.ts
src/components/: HealthCheckQuiz.tsx  Home.tsx  Process.tsx  sectionsConfig.ts
src/context/: ProgressContext.tsx
src/hooks/: useDashboard.ts  useDataFetching.ts  useWebSocket.ts
src/services/: api.ts  dataCollection.ts  integration.ts  websockets.ts
src/store/: index.ts  useAppDispatch.ts  useAppSelector.ts
src/types/: dashboard.ts  index.tsx  usageAnalytics.ts
static/css/: globals.css
templates/: correlation_heatmap_ai_adoption.py  longitundal_ai_adoption.py  multidimensional_complexity_analysis.py  probabilistic_adoption_model.py  radar_chart_organizational.py  scatterplot_matrix_ai_adoption.py
tests/: HealthCheckQuiz.test.tsx
(+41 files in other folders)
